--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Umur:</strong> <span>18</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Pelajar</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Umur   :</strong> <span>18</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Status :</strong> <span>Pelajar</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>No Telp:</strong> <span>+62 83877052118</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Alamat:</strong> <span>Bandung , Jawabarat, Indonesia</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Alamat :</strong> <span>Bandung , Jawa Barat, Indonesia</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ehannch.blogspot.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>raihanfaris799@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Job:</strong> <span>UI Designer</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email  :</strong> <span>raihanfaris799@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Job    :</strong> <span>UI Designer</span></li>
                 </ul>
               </div>
             </div>
@@ -135,13 +135,13 @@
 
         <div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+          <!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="28" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong> Kepuasan Pelanggan</p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
@@ -238,7 +238,7 @@
               <h4>Muhammad Raihan Faris</h4>
               <p><em>Saya adalah siswa SMK Prakarya Internasional dengan jurusan pengembangan perngkat lunak dan gim. Memiliki keterampilan tentang ui design dan ux design.</em></p>
               <ul>
-                <li>Bandung, Jawabarat, Indonesia</li>
+                <li>Bandung, Jawa Barat, Indonesia</li>
                 <li>(62) 83877052118</li>
                 <li>raihanfaris799@gmail.com</li>
               </ul>
@@ -268,6 +268,8 @@
                 <p>Membuat UI/UX website undangan pernikahan digital</p>
                 <li><strong>Merancang UI/UX aplikasi e-commerce</strong></li>
                 <p>Membuat UI/UX aplikasi e-commerce</p>
+                <li><strong>Merancang UI/UX aplikasi toko buku</strong></li>
+                <p>Membuat UI/UX aplikasi toko buku</p>
                 <li><strong>Merancang UI/UX aplikasi kelas online</strong></li>
                 <p>Membuat UI/UX aplikasi kelas online</p>
                 <li><strong>Redesign UI/UX instagram</strong></li>
@@ -388,6 +390,56 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/uiinstagram.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/uiinstagram.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/uiswallow.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/uiswallow.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/uitokogame.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/uitokogame.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/uitokobuku.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/uitokobuku.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/uicekpoin.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/uicekpoin.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -420,7 +472,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>Jasa</h2>
           <p>Tingkatkan daya tarik visual aplikasi atau situs web Anda dengan desain antarmuka yang elegan dan fungsional. Saya fokus pada menciptakan desain yang tidak hanya menarik tetapi juga mudah digunakan. Layanan Saya mencakup pembuatan layout, desain grafis, dan pemilihan palet warna yang sesuai dengan brand Anda.</p>
         </div>
 
@@ -450,7 +502,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Kontak</h2>
 
         </div>
 
@@ -461,7 +513,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Alamat:</h4>
-                <p>Bandung, Jawabarat, Indonesia</p>
+                <p>Bandung, Jawa Barat, Indonesia</p>
               </div>
 
               <div class="email">
